# K-means-clustering

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  plot.py  requirements.txt
data/: data.csv  output.csv  small_data_f2_c3.csv
src/: k-means.cpp  k-means.h
